feat: changed script, css values, added form functionality

--- a/src/html/section/contacts.html
+++ b/src/html/section/contacts.html
@@ -17,10 +17,16 @@
             <div class="form__item">              
               <label for="formName" class="form__label">Your name*:</label>
               <input id="formName" type="text" name="name" class="form__input _req">
+              <div class="form__tooltip">
+                <span class="form__tooltip-text">fill in required fields!</span>
+              </div>
             </div>
             <div class="form__item">              
               <label for="formEmail" class="form__label">Your e-mail*:</label>
               <input id="formEmail" type="text" name="email" class="form__input _req _email">
+              <div class="form__tooltip">
+                <span class="form__tooltip-text">заполните обязательные поля!</span>
+              </div>
             </div> 
                         
           </div><!-- form__flex-alignment -->
