feat: changed css values

--- a/src/bakery.html
+++ b/src/bakery.html
@@ -11,20 +11,22 @@
       <main class="main">
         
         <!-- main page content -->
-        <div class="page-bakery">   
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>Bakery</p>
-          <p>XXXBakery</p>
+        <div class="page-bakery">
+          <div class="container">   
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>Bakery</p>
+            <p>XXXBakery</p>
+          </div>
         </div>
         <!-- main page content --> 
                     
