--- a/src/faq.html
+++ b/src/faq.html
@@ -11,16 +11,17 @@
       <main class="main">
         
         <!-- main page content -->
-        <div class="page-faq">   
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>Tours</p>
-          <p>XXXTours</p>
+        <div class="page-faq">
+          <div class="container">   
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>FAQ</p>
+            <p>XXXFAQ</p>
+          </div>
         </div>
         <!-- main page content -->
                    
