--- a/src/shipping.html
+++ b/src/shipping.html
@@ -12,17 +12,16 @@
         
         <!-- main page content -->
         <div class="page-shipping">
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>Information</p>
-          <p>XXXInformation</p>
+          <div class="container">
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>Shipping</p>
+            <p>XXXShipping</p>
+          </div>
         </div>
         <!-- main page content -->
                        
